# SurveyNow

./: Cargo.toml  README.md  Rocket.toml
migrations/2020-04-01-140003_create_users/: up.sql
migrations/2020-04-02-033316_create_users/: up.sql
migrations/2020-04-15-141938_add_colum_is_admin/: down.sql  up.sql
src/: main.rs  schema.rs
src/handlers/: auth.rs  authentication.rs  mod.rs  register.rs  user.rs
src/models/: user.rs
src/repositories/: mod.rs  user.rs
