[package]
name = "surveys"
version = "0.1.0"
authors = ["nvme <godblessewan@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rocket = "0.4.4"
diesel = { version = "1.0.0", features = ["postgres","chrono"] }
dotenv = "0.15.0"
dotenv_codegen="0.15.0"
jsonwebtoken = "5"
bcrypt = "0.4.0"
chrono = { version = "0.4.6", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["diesel_postgres_pool", "json"]
